Disable all optimization:
By running the following cmd:

```
   $ find . -name Makefile | xargs sed -i 's/-O[^ ]*/-O0/g'
```

--- a/KPRCA_00015/Makefile
+++ b/KPRCA_00015/Makefile
@@ -2,6 +2,6 @@ POLLS_RELEASE_SEED= -460875359
 POLLS_TESTING_SEED= 1788942791
 AUTHOR_ID  = KPRCA
 SERVICE_ID = 00015
-CFLAGS     = -Os -g -Werror -Wno-overlength-strings -Wno-packed
+CFLAGS     = -O0 -g -Werror -Wno-overlength-strings -Wno-packed
 
 include /usr/share/cb-testing/cgc-cb.mk
