--- a/KPRCA_00046/Makefile
+++ b/KPRCA_00046/Makefile
@@ -1,7 +1,7 @@
 POLLS_RELEASE_SEED= -2099268056
 AUTHOR_ID  = KPRCA
 SERVICE_ID = 00046
-CFLAGS     = -Ofast -g -Werror -Wno-overlength-strings -Wno-packed
+CFLAGS     = -O0 -g -Werror -Wno-overlength-strings -Wno-packed
 POLLS_TESTING_COUNT = 1000
 POLLS_TESTING_SEED = -1438114493
 
