--- a/KPRCA_00001/Makefile
+++ b/KPRCA_00001/Makefile
@@ -1,7 +1,7 @@
 POLLS_RELEASE_SEED= -1778606513
 AUTHOR_ID  = KPRCA
 SERVICE_ID = 00001
-CFLAGS     = -Os -g -Werror -Wno-overlength-strings -Wno-packed
+CFLAGS     = -O0 -g -Werror -Wno-overlength-strings -Wno-packed
 
 POLLS_TESTING_SEED = 1763254697
 
