--- a/KPRCA_00003/Makefile
+++ b/KPRCA_00003/Makefile
@@ -1,7 +1,7 @@
 POLLS_RELEASE_SEED= 709726933
 AUTHOR_ID  = KPRCA
 SERVICE_ID = 00003
-CFLAGS     = -Ofast -g -Werror -Wno-overlength-strings -Wno-packed
+CFLAGS     = -O0 -g -Werror -Wno-overlength-strings -Wno-packed
 
 POLLS_TESTING_SEED=349507159
 
