--- a/KPRCA_00007/Makefile
+++ b/KPRCA_00007/Makefile
@@ -2,6 +2,6 @@ POLLS_TESTING_SEED= 618544215
 AUTHOR_ID  = KPRCA
 SERVICE_ID = 00007
 POLLS_RELEASE_SEED = 1597909308
-CFLAGS     = -Os -g -Werror -Wno-overlength-strings -Wno-packed
+CFLAGS     = -O0 -g -Werror -Wno-overlength-strings -Wno-packed
 
 include /usr/share/cb-testing/cgc-cb.mk
