--- a/KPRCA_00008/Makefile
+++ b/KPRCA_00008/Makefile
@@ -2,6 +2,6 @@ POLLS_TESTING_SEED= 1659397510
 AUTHOR_ID  = KPRCA
 SERVICE_ID = 00008
 POLLS_RELEASE_SEED = 189673785
-CFLAGS     = -Os -g -Werror -msse
+CFLAGS     = -O0 -g -Werror -msse
 
 include /usr/share/cb-testing/cgc-cb.mk
