--- a/KPRCA_00077/Makefile
+++ b/KPRCA_00077/Makefile
@@ -1,6 +1,6 @@
 AUTHOR_ID  = KPRCA
 SERVICE_ID = 00077
-CFLAGS     = -Ofast -g -Werror -Wall
+CFLAGS     = -O0 -g -Werror -Wall
 CXXFLAGS   = --std=c++11 -fno-exceptions -fno-rtti -DCPLUSPLUS -Dmain=_main
 VULN_COUNT = 1
 
